Fixed bug #27175 (tzset() is not being called by PHP on startup).